Copy data path operator does not consider library affiliation #88499

Closed
opened 2021-05-23 11:34:00 +02:00 by Simon Thommes · 6 comments
Member

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-21 17:24, hash: 9c4ecef62f
Worked: (newest version of Blender that worked as expected)

Short description of error
When using the operator ui.copy_data_path_button(full_path=True) ({key ctrl shift Alt C} on hover) the copied path does not consider the library origin. That means that when there is a name clash the data path is not accurate and refers to the local item instead.

copy_data_path_library.mp4
library_data_path.zip

(Not sure if you could actually call this a bug, as accessing the rna path of library properties is not really intended use. It's probably more likely a feature request, but it would be incredibly useful for python overrides, as getting the correct context otherwise can be quite difficult (e.g. pinning))

**System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-21 17:24, hash: `9c4ecef62f` Worked: (newest version of Blender that worked as expected) **Short description of error** When using the operator `ui.copy_data_path_button(full_path=True)` ({key ctrl shift Alt C} on hover) the copied path does not consider the library origin. That means that when there is a name clash the data path is not accurate and refers to the local item instead. [copy_data_path_library.mp4](https://archive.blender.org/developer/F10136849/copy_data_path_library.mp4) [library_data_path.zip](https://archive.blender.org/developer/F10136851/library_data_path.zip) (Not sure if you could actually call this a bug, as accessing the rna path of library properties is not really intended use. It's probably more likely a feature request, but it would be incredibly useful for python overrides, as getting the correct context otherwise can be quite difficult (e.g. pinning))
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes

This issue was referenced by 63e50cf265

This issue was referenced by 63e50cf265d6f17785ffdf0d0a7220237b054050
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

I have made a quick patch for this, but would refrain from classifying this as a bug (not even sure if the patch is doable because not sure about all consequences).
Will pass to the hands of the modules.

I have made a quick patch for this, but would refrain from classifying this as a bug (not even sure if the patch is doable because not sure about all consequences). Will pass to the hands of the modules.
Member

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Philipp Oeser self-assigned this 2021-05-28 11:18:12 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88499
No description provided.